- replace direct Thread.currentThread().getId() to static call - custom threadLocal
Signed-off-by: Dmitriy Govorukhin <dmitriy.govorukhin@gmail.com>