@@ -36,6 +36,7 @@ import org.apache.ignite.internal.processors.cache.distributed.dht.CompoundLockF
 import org.apache.ignite.internal.processors.cache.distributed.dht.GridDhtTopologyFuture;
 import org.apache.ignite.internal.processors.cache.distributed.dht.GridDhtTxAbstractEnlistFuture;
 import org.apache.ignite.internal.processors.cache.distributed.dht.GridDhtTxLocalAdapter;
+import org.apache.ignite.internal.util.ThreadResolver;
 import org.apache.ignite.internal.processors.cache.mvcc.MvccSnapshot;
 import org.apache.ignite.internal.processors.cache.version.GridCacheVersion;
 import org.apache.ignite.internal.processors.timeout.GridTimeoutObjectAdapter;
@@ -206,7 +207,7 @@ public abstract class GridNearTxAbstractEnlistFuture<T> extends GridCacheCompoun
             cctx.time().addTimeoutObject(timeoutObj);
 
         // Obtain the topology version to use.
-        long threadId = Thread.currentThread().getId();
+        long threadId = ThreadResolver.threadId();
 
         AffinityTopologyVersion topVer = cctx.mvcc().lastExplicitLockTopologyVersion(threadId);
 
