@@ -25,6 +25,7 @@ import org.apache.ignite.internal.processors.cache.GridCacheMapEntry;
 import org.apache.ignite.internal.processors.cache.GridCacheMvcc;
 import org.apache.ignite.internal.processors.cache.GridCacheMvccCandidate;
 import org.apache.ignite.internal.processors.cache.KeyCacheObject;
+import org.apache.ignite.internal.util.ThreadResolver;
 import org.apache.ignite.internal.processors.cache.transactions.IgniteInternalTx;
 import org.apache.ignite.internal.processors.cache.version.GridCacheVersion;
 import org.apache.ignite.internal.util.typedef.internal.S;
@@ -261,7 +262,7 @@ public class GridLocalCacheEntry extends GridCacheMapEntry {
      * Releases local lock.
      */
     void releaseLocal() {
-        releaseLocal(Thread.currentThread().getId());
+        releaseLocal(ThreadResolver.threadId());
     }
 
     /**
